--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "api" : " NODE_ENV=dev supervisor ./src/mock/app.js",
-    "wapi" : "set NODE_ENV=dev&&supervisor ./src/mock/app.js"
+    "api": " NODE_ENV=dev supervisor ./src/mock/app.js",
+    "wapi": "set NODE_ENV=dev&&supervisor ./src/mock/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -41,6 +41,7 @@
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.2",
+    "gulp-watch": "^4.3.9",
     "gulp-watch-path": "^0.1.0",
     "json-loader": "^0.5.4",
     "node-sass": "^3.4.2",
