--- a/public/static/es6/rev-manifest.json
+++ b/public/static/es6/rev-manifest.json
@@ -1,7 +1,8 @@
 {
-  "1.js": "1-4263177e4e.js",
-  "home/index.js": "home/index-4d82661d5b.js",
+  "1.js": "1-64ed54aa38.js",
+  "home/index.js": "home/index-d39b97ffda.js",
+  "home/test.js": "home/test-cf3a10cec1.js",
   "lib/vue.js": "lib/vue-0cffaa966a.js",
-  "shopping/buy.js": "shopping/buy-e86e3b89ee.js",
-  "tools.js": "tools-5d6efcc4e7.js"
+  "shopping/buy.js": "shopping/buy-1cfdabdbf9.js",
+  "tools.js": "tools-155058fbfb.js"
 }
