--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "api": " NODE_ENV=dev supervisor ./src/mock/app.js",
-    "wapi": "set NODE_ENV=dev&&supervisor ./src/mock/app.js"
+    "build": "NODE_ENV=production gulp build",
+    "dev": "NODE_ENV=dev gulp reload"
   },
   "author": "",
   "license": "ISC",
@@ -30,7 +30,6 @@
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
     "gulp-base64": "^0.1.3",
-    "gulp-html-replace": "^1.5.5",
     "gulp-if-else": "^1.0.3",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
