--- a/public/static/rev-manifest.json
+++ b/public/static/rev-manifest.json
@@ -1,9 +1,10 @@
 {
-  "es6/1.js": "es6/1-e6484d1031.js",
-  "es6/home/index.js": "es6/home/index-93232d54af.js",
-  "es6/home/test.js": "es6/home/test-fd5881cc0b.js",
+  "es6/2.js": "es6/2-2ea2d7f22a.js",
+  "es6/ajaxurl.js": "es6/ajaxurl-4d95a6ab41.js",
+  "es6/home/index.js": "es6/home/index-2e5eaf8d04.js",
+  "es6/home/test.js": "es6/home/test-014bb33d34.js",
   "es6/lib/vue-tap.js": "es6/lib/vue-tap-0128882e5c.js",
   "es6/lib/vue.js": "es6/lib/vue-0cffaa966a.js",
-  "es6/shopping/buy.js": "es6/shopping/buy-9f9e2540f8.js",
-  "es6/tools.js": "es6/tools-195ee02c8c.js"
+  "es6/shopping/buy.js": "es6/shopping/buy-6861557607.js",
+  "es6/tools.js": "es6/tools-322efdb84a.js"
 }
