--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "v-tap": "^1.0.3",
     "vue": "^1.0.15",
     "vuex": "^0.6.2"
   },
